[package]
name = "hn_most_refed"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
rdkafka = { version = "0.34", features = ["cmake-build"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10"